--- a/clarityapp/templates/generate_report.html
+++ b/clarityapp/templates/generate_report.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Выгрузка отчета</title>
+    <title>Отчет</title>
 </head>
 <body>
-    <h1>Выгрузка отчета</h1>
-    <form action="{% url 'generate_report' %}" method="post">
-        {% csrf_token %}
-        <input type='text' name='message'
-        <button type="submit">Выгрузить отчет</button>
-    </form>
+    <a href="{{ download_url }}" download>Скачать файл</a>
 </body>
 </html>
