--- a/clarityapp/templates/indexforclarity1.html
+++ b/clarityapp/templates/indexforclarity1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CLARITY | Анализ рекламной кампании</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   </head>
   <body>
    <nav class="navbar navbar-expand-lg bg-body-tertiary ms-5">
@@ -21,11 +22,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="http://127.0.0.1:8000/indexforclarity2/">Обучение</a>
 
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:8000/registration_page/">Регистрация</a>
-
-                    </li>
                 </ul>
             </div>
         </div>
@@ -36,7 +32,7 @@
       <br>
     </div>
 
-    <button type="button" class="btn btn-outline-secondary ms-5">1 неделя</button>
+
 
     <span class="placeholder col-12 bg-secondary ms-5"></span>
 
@@ -59,28 +55,44 @@
           </li>
 
         </ul>
-      <div class="d-flex ms-5" style="height: 200px;">
+    <div class="d-flex ms-5" style="height: 200px;">
     <div class="vr"></div>
     </div>
-        <div class="card ms-5" style="width: 15rem;">
-         <div class="card-body">
-              <h5 class="card-title">Ключи, давшие конверсию</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">< 50 руб/клик</h6>
-              <p class="card-text">Сортировка поубыванию. Выберите желаемый формат выгрузки:</p>
-              <a href="#" class="card-link">exel-формат</a>
-              <a href="#" class="card-link">csv-формат</a>
-         </div>
-       </div>
+        <div class="row">
+  <style>
+  .card {
+    border: 1px solid #FF0000;
+  }
+
+  .card-green {
+    border: 1px solid #008000;
+  }
+  </style>
+  <div class="col-md-6">
+    <!-- Первая карточка -->
+    <div class="card ms-5 card-green" style="width: 15rem;">
+      <div class="card-body">
+        <h5 class="card-title">Ключи, давшие конверсию</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">< 50 руб/клик</h6>
+        <p class="card-text">Сортировка по убыванию. Выберите желаемый формат выгрузки:</p>
+        <a href="#" class="card-link">exel-формат</a>
+        <a href="#" class="card-link">csv-формат</a>
       </div>
     </div>
-    {% load static %}
-
+  </div>
+  <div class="col-md-6">
+    <!-- Вторая карточка -->
+    <div class="card ms-5" style="width: 16rem;">
+      <div class="card-body">
+        <h5 class="card-title">Ключи, не давшие конверсию</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">> 100 руб/клик</h6>
+        <p class="card-text">Сортировка по возрастанию. Выберите желаемый формат выгрузки:</p>
+        <a href="#" class="card-link">exel-формат</a>
+        <a href="#" class="card-link">csv-формат</a>
+      </div>
+    </div>
+  </div>
+  </div>
   </body>
 </html>
-
-
-
-
-
-
 
