--- a/clarityapp/templates/indexforclarity2.html
+++ b/clarityapp/templates/indexforclarity2.html
@@ -1,27 +1,84 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>{{title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Как получить отчет?</title>
+    <!-- Подключение бутстрап -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    {% include 'menuforclarity.html' %}
-    Данный сервис предоставляет возможность получать данные по рекламной кампании из кабинета Яндекс Директ и
-    автоматически сортировать и группировать их для анализа. Вам доступны следующие отчеты:
- <ul>
-     <li>Позитивная конверсия: отчет, содержащий ключевые фразы, которые принесли конверсии, с низкой стоимостью
-         клика (от 50 руб/клик и ниже).</li>
-     <li>Отрицательная конверсия: отчет, содержащий ключевые фразы, которые не принесли конверсии, с высокой
-         стоимостью клика (от 100 руб/клик и выше).</li>
-     <li>Отрицательная конверсия (повторные показы): отчет, содержащий ключевые фразы, которые не принесли
-         конверсии, но были показаны более одного раза.</li>
- </ul>
-    <p>Для выгрузки отчета, выберите нужный вам отчет и формат экспорта (Excel или CSV). После этого, нажмите кнопку
-        "Выгрузить отчет" и сохраните файл на своем компьютере.</p>
+    <div class="container mt-5">
+        {% include 'menuforclarity.html' %}
+        <div class="mt-4">
+            <h1 class="text-center">{{title}}</h1>
+            <p class="mt-3">Данный сервис предоставляет возможность получать и анализировать данные по рекламной кампании по API
+            из кабинета Яндекс Директ и автоматически сортировать и группировать их для анализа. Для настройки понадобится:
+            токен, который нужно получить от Яндекс Директ и наименование кампании, для которой требуется анализ данных,
+            период времени, за который требуется анализ.</p>
 
-
-    <button type="button" class="btn btn-outline-secondary ms-5"><a href="http://127.0.0.1:8000/">Вернуться обратно</a></button>
-
+            <h4 class="mt-4">На сегодняшний день доступны следующие отчеты:</h4>
+            <ul class="list-group mt-3">
+                <li class="list-group-item">Позитивная конверсия: отчет, содержащий ключевые фразы, которые принесли заявки, с низкой стоимостью
+                    клика (от 50 руб/клик и ниже).</li>
+                <li class="list-group-item">Отрицательная конверсия: отчет, содержащий ключевые фразы, которые не принесли заявки, с высокой
+                    стоимостью клика (от 100 руб/клик и выше).</li>
+            </ul>
+            <button type="button" class="btn btn-outline-secondary mt-3">
+                <a href="http://127.0.0.1:8000/" class="text-decoration-none text-dark">Вернуться обратно</a>
+            </button>
+        </div>
+    </div>
+    <!-- Подключение Bootstrap JS и зависимостей -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--{% load static %}-->
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>{{title}}</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--    {% include 'menuforclarity.html' %}-->
+<!--    Данный сервис предоставляет возможность получать и анализировать данные по рекламной кампании по API-->
+<!--    из кабинета Яндекс Директ и автоматически сортировать и группировать их для анализа. Для настройки понадобится:-->
+<!--    токен, который нужно получить от Яндекс Директ и наименование кампании, для которой требуется анализ данных,-->
+<!--    период времени, за который требуется анализ.-->
+
+<!--    На сегодняшний день доступны следующие отчеты:-->
+<!-- <ul>-->
+<!--     <li>Позитивная конверсия: отчет, содержащий ключевые фразы, которые принесли заявки, с низкой стоимостью-->
+<!--         клика (от 50 руб/клик и ниже).</li>-->
+<!--     <li>Отрицательная конверсия: отчет, содержащий ключевые фразы, которые не принесли заявки, с высокой-->
+<!--         стоимостью клика (от 100 руб/клик и выше).</li>-->
+<!-- </ul>-->
+<!--    <button type="button" class="btn btn-outline-secondary ms-5"><a href="http://127.0.0.1:8000/">Вернуться обратно</a></button>-->
+<!--</body>-->
+<!--</html>-->
