--- a/clarityapp/templates/registration_page.html
+++ b/clarityapp/templates/registration_page.html
@@ -1,21 +1,63 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Форма регистрации</title>
+    <!-- Подключение Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Форма регистрации</h1>
-    <br>
-    <form method="post">
-        {% csrf_token %}
-        <label for="name">Ваше имя</label>
-        <input type="text" id="name" name="name" maxleght="100" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" maxleght="100" required>
-
-        <button type="submit">Отправить</button>
-        <button type="submit"><a href="http://127.0.0.1:8000/">Вернуться обратно</a>></button>
+    <div class="container mt-5">
+        <h1 class="text-center">Форма регистрации</h1>
+        <br>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name">Ваше имя</label>
+                <input type="text" class="form-control" id="name" name="name" maxlength="100" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" maxlength="100" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Отправить</button>
+            <a href="http://127.0.0.1:8000/" class="btn btn-secondary ml-2">Вернуться обратно</a>
+        </form>
+        <br>
+        <p>Мы свяжемся с Вами по указанным данным.</p>
+    </div>
+    <!-- Подключение Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Форма регистрации</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--    <h1>Форма регистрации</h1>-->
+<!--    <br>-->
+<!--    <form method="post">-->
+<!--        {% csrf_token %}-->
+<!--        <label for="name">Ваше имя</label>-->
+<!--        <input type="text" id="name" name="name" maxleght="100" required>-->
+
+<!--        <label for="email">Email:</label>-->
+<!--        <input type="email" id="email" name="email" maxleght="100" required>-->
+
+<!--        <button type="submit">Отправить</button>-->
+<!--        <button type="submit"><a href="http://127.0.0.1:8000/">Вернуться обратно</a>></button>-->
+<!--</body>-->
+<!--</html>-->
+
